DataSeeder-part1